--- a/cli/package.json
+++ b/cli/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ansicolor": "^2.0.3",
     "as-table": "^1.0.55",
+    "commander": "^14.0.0",
     "ololog": "^1.1.175"
   }
 }
