--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,10 +2,10 @@ name: Python
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  # push:
+  #   branches: [ main, master ]
+  # pull_request:
+  #   branches: [ main, master ]
 
 permissions:
   contents: read
