--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "pre-transpile": "npm run export-exchanges && npm run vss && npm run tsBuild && npm run emitAPI && npm run validate-types && npm run tsBuildExamples && npm run copy-python-files && npm run check-js-syntax && npm run bundle",
     "pre-transpile-pr": "npm run export-exchanges && npm run tsBuild && npm run emitAPI && npm run check-js-syntax",
     "post-transpile": "npm run check-python-syntax && npm run check-php-syntax",
-    "cli.ts": "tsx ./ts/cli/cli.ts",
+    "cli.ts": "tsx ./cli/ts/cli.ts",
     "cli.js": "node ./js/cli/cli.js",
     "cli.py": "python3 ./examples/py/cli.py",
     "cli.php": "php ./examples/php/cli.php",
