remove bin from main package

--- a/cli/package.json
+++ b/cli/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "ccxt-cli": "./js/cli.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
