--- a/cli/package.json
+++ b/cli/package.json
@@ -2,19 +2,20 @@
   "name": "ccxt-cli",
   "version": "1.0.0",
   "description": "CLI for the CCXT package",
-  "main": "cli.js",
+  "main": "./js/cli.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "ccxt-cli": "./js/cli.js"
+    "ccxt": "./js/cli.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ansicolor": "^2.0.3",
     "as-table": "^1.0.55",
+    "ccxt": "^4.4.86",
     "commander": "^14.0.0",
     "ololog": "^1.1.175"
   }
