--- a/cli/package.json
+++ b/cli/package.json
@@ -5,14 +5,15 @@
   "main": "./js/cli.js",
   "type": "module",
   "scripts": {
-    "test": "echo\"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "publishPackage": "npm run build && npm publish"
   },
   "bin": {
     "ccxt": "./js/cli.js"
   },
   "author": "CCXT",
-  "license": "ISC",
+  "license": "MIT",
+  "keywords": ["ccxt", "cli", "crypto", "exchange", "trading"],
   "dependencies": {
     "ansicolor": "^2.0.3",
     "as-table": "^1.0.55",
@@ -27,5 +28,9 @@
   "readme": "README.md",
   "publishConfig": {
     "registry": "https://registry.npmjs.com"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/ccxt/ccxt/issues"
+  },
+  "homepage": "https://ccxt.com"
 }
