--- a/cli/package.json
+++ b/cli/package.json
@@ -13,12 +13,20 @@
   },
   "author": "CCXT",
   "license": "MIT",
-  "keywords": ["ccxt", "cli", "crypto", "exchange", "trading"],
+  "keywords": [
+    "ccxt",
+    "cli",
+    "crypto",
+    "exchange",
+    "trading"
+  ],
   "dependencies": {
     "ansicolor": "^2.0.3",
     "as-table": "^1.0.55",
     "ccxt": "^4.4.86",
+    "clipboardy": "^4.0.0",
     "commander": "^14.0.0",
+    "i": "^0.3.7",
     "ololog": "^1.1.175"
   },
   "repository": {
