--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ccxt/ccxt.git"
+    "url": "git+https://github.com/ccxt/ccxt.git"
   },
   "readme": "README.md",
   "scripts": {
