--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -12,9 +12,16 @@ body:
         - You have already searched for similar issues
         - Read the [Manual](https://github.com/ccxt/ccxt/wiki/Manual), especally sections: `Exchange Properties`, `Rate Limit`, `Authentication`, `API keys`, as the subject might already be described there.
         - Read the [FAQ](https://github.com/ccxt/ccxt/wiki/FAQ) for most frequently asked questions
-        - Read the [Troubleshooting](https://github.com/ccxt/ccxt/wiki/Manual#troubleshooting) section of the manual and followed troubleshooting steps & [How to submit a good issue](https://github.com/ccxt/ccxt/blob/master/CONTRIBUTING.md#how-to-submit-an-issue)
+        - Read the [Troubleshooting](https://github.com/ccxt/ccxt/wiki/Manual#troubleshooting) section of the manual and followed troubleshooting steps
+        - Set `exchange.verbose = true` property on the exchange instance before calling its functions or methods
 
-        ---
+        ## Provide:
+        - minimal, reproducible example/code
+        - surround your code and verbose output with triple backticks: 
+          &#096;&#096;&#096;
+          your codes & output
+          &#096;&#096;&#096;**
+          (You can remove sensitive info from output)
 
   - type: input
     id: operating-system
