--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       value: |
         ## Ensure :
-        - This question is directly related to ccxt
+        - Your issue is directly related to ccxt
         - Your local CCXT version is up to date (view the latest available version [here](https://github.com/ccxt/ccxt/blob/master/package.json#L3) )
         - You have already searched for similar issues
         - Read the [Manual](https://github.com/ccxt/ccxt/wiki/Manual), especally sections: `Exchange Properties`, `Rate Limit`, `Authentication`, `API keys`, as the subject might already be described there.
@@ -15,13 +15,13 @@ body:
         - Read the [Troubleshooting](https://github.com/ccxt/ccxt/wiki/Manual#troubleshooting) section of the manual and followed troubleshooting steps
         - Set `exchange.verbose = true` property on the exchange instance before calling its functions or methods
 
-        ## Provide:
+        ## Please provide:
         - minimal, reproducible example/code
         - surround your code and verbose output with triple backticks: 
           &#096;&#096;&#096;
           your codes & output
-          &#096;&#096;&#096;**
-          (You can remove sensitive info from output)
+          &#096;&#096;&#096;
+        - Do not include keys & credentials.
 
   - type: input
     id: operating-system
