--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -20,9 +20,9 @@ body:
         - surround your code and verbose output with triple backticks: 
           ```` ``` ````
           ```
-          your codes & output
-          ```````
+          your codes or output
           ```
+          ```` ``` ````
         - Do not include keys & credentials.
 
   - type: input
