--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -13,9 +13,9 @@ body:
         - Read the [Manual](https://github.com/ccxt/ccxt/wiki/Manual), especially sections: `Exchange Properties`, `Rate Limit`, `Authentication`, `API keys`, as the subject might already be described there.
         - Read the [FAQ](https://github.com/ccxt/ccxt/wiki/FAQ) for most frequently asked questions
         - Read the [Troubleshooting](https://github.com/ccxt/ccxt/wiki/Manual#troubleshooting) section of the manual and followed troubleshooting steps
-        - Set `exchange.verbose = true` property on the exchange instance before calling its functions or methods
 
         ## Please provide:
+        - Set `exchange.verbose = true` property before calling its functions
         - minimal, reproducible example/code
         - surround your code and verbose output with triple backticks:
           ```` ``` ````
