--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -14,6 +14,19 @@ body:
         - Read the [FAQ](https://github.com/ccxt/ccxt/wiki/FAQ) for most frequently asked questions
         - Read the [Troubleshooting](https://github.com/ccxt/ccxt/wiki/Manual#troubleshooting) section of the manual and followed troubleshooting steps
         - Set `exchange.verbose = true` property on the exchange instance before calling its functions or methods
+        
+        ````markdown
+        Here is an example of a Go code block in Markdown:
+        
+        ```go
+        package main
+        
+        import "fmt"
+        
+        func main() {
+            fmt.Println("Hello, World!")
+        }
+        ```
 
         ## Please provide:
         - minimal, reproducible example/code
