--- a/.github/workflows/go-app.yml
+++ b/.github/workflows/go-app.yml
@@ -151,9 +151,13 @@ jobs:
       #   run: go build ./go/tests/main.go
       # - name: Adjust permissions
       #   run: cd go && chmod +x main
+      - name: Build
+        run: cd go && go build ./v4 && cd ..
+      - name: Build tests
+        run: cd go && go build ./tests/main.go && cd ..
       - name: Live tests
         if: env.important_modified == 'true'
-        run: cd go/ && npm run live-tests-rest-go
+        run: node run-tests --go
       - name: Live tests (specific)
         if: env.important_modified == 'false'
         run: ./run-tests-simul.sh --go "${{ env.rest_files }}"
