--- a/.github/workflows/go-app.yml
+++ b/.github/workflows/go-app.yml
@@ -137,6 +137,8 @@ jobs:
         with:
           name: go-files
           path: go/
+      - name: Restore shared_env
+        run: ./utils/restore_shared_env.sh
       - name: Build tests
         run: cd  go/ && go build ./tests/main.go
       - name: Install npm dependencies
@@ -156,7 +158,7 @@ jobs:
       - name: Build tests
         run: cd go && go build ./tests/main.go && cd ..
       - name: Live tests
-        # if: env.important_modified == 'true'
+        if: env.important_modified == 'true'
         run: node run-tests --go
       - name: Live tests (specific)
         if: env.important_modified == 'false'
