--- a/.github/workflows/go-app.yml
+++ b/.github/workflows/go-app.yml
@@ -159,7 +159,7 @@ jobs:
         run: cd go && go build ./tests/main.go && cd ..
       - name: Live tests
         if: env.important_modified == 'true'
-        run: node run-tests --go
+        run: node run-tests --go --useProxy
       - name: Live tests (specific)
         if: env.important_modified == 'false'
         run: ./run-tests-simul.sh --go "${{ env.rest_files }}"
