update tests command

--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "request-php-sync": "npm run ti-php -- --requestTests --sync",
     "request-php": "npm run request-php-sync && npm run request-php-async",
     "request-cs": "npm run ti-cs  -- --requestTests",
-    "request-go": "npm run ti-go -- --requestTests && cd ../",
+    "request-go": "npm run ti-go -- --requestTests",
     "request-tests//withoutGo": "npm run request-js && npm run request-py && npm run request-php && npm run request-cs",
     "request-tests": "npm run request-js && npm run request-py && npm run request-php && npm run request-cs && npm run request-go",
     "response-ts": "npm run ti-ts  -- --responseTests",
@@ -149,7 +149,7 @@
     "response-py-async": "npm run ti-py  -- --responseTests",
     "response-py": "npm run response-py-sync && npm run response-py-async",
     "response-cs": "npm run ti-cs  -- --responseTests",
-    "response-go": "npm run ti-go  -- --responseTests && cd ../",
+    "response-go": "npm run ti-go  -- --responseTests",
     "response-php-async": "npm run ti-php -- --responseTests",
     "response-php-sync": "npm run ti-php -- --responseTests --sync",
     "response-php": "npm run response-php-sync && npm run response-php-async",
