--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -42,7 +42,7 @@ body:
   - type: input
     id: ccxt-version
     attributes:
-      label: CCXT Version
+      label: CCXT Version (ensure you have the latest version as shown here https://github.com/ccxt/ccxt/blob/master/package.json#L3 )
     validations:
       required: false
 
