--- a/.github/workflows/test-env.yml
+++ b/.github/workflows/test-env.yml
@@ -12,8 +12,9 @@ jobs:
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
+    environment: Prod
     steps:
-      - name: Check if secret is available if not prod
+      - name: Check if secret is available
         run: |
           if [ -z "${{ secrets.NUGET_PROD }}" ]; then
             echo "❌ DEPLOY_KEY is NOT defined in this environment."
