--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: Js
+name: PHP
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
     branches: [ main, master ]
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   build:
@@ -17,17 +17,10 @@ jobs:
     steps:
     - name: Print vars
       run: |
-        echo "GitHub Actor: $GITHUB_ACTOR"
-        echo "Repository: $GITHUB_REPOSITORY"
-        echo "Event Name: $GITHUB_EVENT_NAME"
-        echo "Workflow Name: $GITHUB_WORKFLOW"
-        echo "Run ID: $GITHUB_RUN_ID"
-        echo "Run Number: $GITHUB_RUN_NUMBER"
-        echo "Job Name: $GITHUB_JOB"
-        echo "Ref: $GITHUB_REF"
-        echo "SHA: $GITHUB_SHA"
-        echo "Head Commit: ${{ github.event.head_commit.message }}"
-        echo "Branch Name: ${GITHUB_REF##*/}"  # Extract the branch name from GITHUB_REF
+          echo "GITHUB_ACTOR: {{ github.actor }}"
+          echo "GITHUB_EVENT_NAME: {{ github.event_name }}"
+          echo "GITHUB_EVENT_PUSH_NAME: {{ github.event.pusher.name }}"
+          echo "GITHUB_REF: {{ github.ref }}"
     - uses: actions/checkout@v4
       if: github.ref == 'refs/heads/master'
       with:
@@ -44,76 +37,72 @@ jobs:
           echo "This commit was made by the action. Skipping."
           exit 0
         fi
+    - name: Setup PHP with PECL extension
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.4'
+        # cache: true
+        ini-values: |
+          zend.assertions=1
+          display_errors=On
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
         cache: 'npm'
     - name: Install npm dependencies
       run: npm ci --include=dev
-    - name: Debug files changes
-      run: git diff --name-only HEAD^1 HEAD
+    - name: Composer install
+      run: composer install
     - name: Determine modified files
       run: ./utils/init_actions.sh
-    - name: Debug output
-      run: |
-        echo "Important files modified: ${{ env.important_modified }}"
-        echo "REST files: ${{ env.rest_files }}"
-        echo "WS files: ${{ env.ws_files }}"
-        cat shared_env.txt
-    - name: Check ref
-      run: echo $GITHUB_REF
-    - name: Remove JS Folder
-      if: github.ref == 'refs/heads/master'
-      run: |
-        rm -rf js/
-    - name: Pre-transpile and transpile TS
+    - name: Pre-transpile (export exchanges and emit API)
+      run: npm run pre-transpile-php
+    - name: Transpile to PHP
       if: env.important_modified == 'true'
-      run: npm run pre-transpile-js
-    - name: Pre-transpile and transpile TS (Simplified)
-      if: env.important_modified == 'false'
-      run: npm run pre-transpile-js-simple
-    - name: Lint Rest (specific)
+      run: npm run force-transpile-fast-php
+    - name: Transpile to PHP (specific)
       if: env.important_modified == 'false'
       run: |
         cleaned_rest_files=$(echo ${{ env.rest_files }} | tr -s ' ')
         for exchange in $cleaned_rest_files; do
-          npm run eslint "ts/src/$exchange.ts"
+          npm run transpileRest -- --php $exchange
         done
-    - name: Lint Ws (specific)
-      if: env.important_modified == 'false'
-      run: |
         cleaned_ws_files=$(echo ${{ env.ws_files }} | tr -s ' ')
         for exchange in $cleaned_ws_files; do
-          npm run eslint "ts/src/pro/$exchange.ts"
+          npm run transpileWs -- --php $exchange
         done
+    - name: Post-transpile (syntax check)
+      run: npm run check-php-syntax
     - name: Run Base Tests
       if: env.important_modified == 'true'
-      run: npm run test-base-rest-js
+      run: npm run test-base-rest-php
     - name: Run Base Ws Tests
       if: env.important_modified == 'true'
-      run: npm run test-base-ws-js
+      run: npm run test-base-ws-php
     - name: Run Id Tests
       if: env.important_modified == 'true'
-      run: npm run id-tests-js
+      run: npm run id-tests-php
     - name: Request tests
       if: env.important_modified == 'true'
-      run: npm run request-js
+      run: npm run request-php
     - name: Request tests (specific)
       if: env.important_modified == 'false'
       run: |
         cleaned_rest_files=$(echo ${{ env.rest_files }} | tr -s ' ')
         for exchange in $cleaned_rest_files; do
-          npm run request-js -- $exchange
+          npm run request-php-sync -- $exchange
+          npm run request-php-async -- $exchange
         done
     - name: Response tests
       if: env.important_modified == 'true'
-      run: npm run response-js
+      run: npm run response-php
     - name: Response tests (specific)
       if: env.important_modified == 'false'
       run: |
         cleaned_rest_files=$(echo ${{ env.rest_files }} | tr -s ' ')
         for exchange in $cleaned_rest_files; do
-          npm run response-js -- $exchange
+          npm run response-php-sync -- $exchange
+          npm run response-php-async -- $exchange
         done
     - name: Upload shared_env.txt
       uses: actions/upload-artifact@v4
@@ -121,36 +110,25 @@ jobs:
           name: shared_env
           path: shared_env.txt
 
-    - name: Upload Js Files
+    - name: Upload PHP Files
       uses: actions/upload-artifact@v4
       with:
-        name: js-files
-        path: js/
-    - name: Push JS changes to master
+        name: php-files
+        path: php/
+
+    - name: Push PHP changes to master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       if: github.ref == 'refs/heads/master'
       run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add js/ dist/ wiki/ README.md ts/ccxt.ts
-          git commit -m "[Automated changes] JS files" || echo "No changes to commit."
+          git add php/
+          git commit -m "[Automated changes] PHP files" || echo "No changes to commit."
           git remote set-url origin https://${GITHUB_TOKEN}@github.com/${{ github.repository }}
           git config --global pull.rebase false
-          git pull origin master
+          git pull --rebase --autostash origin master
           git push
-    - name: Push To CCXT.WIKI
-      if: github.ref == 'refs/heads/master'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      run: |
-        cd build/ccxt.wiki
-        cp -R ../../wiki/* .
-        git commit -a -m "[Automated changes] ${{ github.event.head_commit.message }}" || true
-        git remote remove origin
-        git remote add origin https://${GITHUB_TOKEN}@github.com/ccxt/ccxt.wiki.git
-        git push origin HEAD:master
-        cd ../..
 
   live-tests:
     needs: build
@@ -161,24 +139,34 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: shared_env
-      - name: Download JS Files
+      - name: Download PHP Files
         uses: actions/download-artifact@v4
         with:
-          name: js-files
-          path: js/
+          name: php-files
+          path: php/
       - name: Restore shared_env
         run: ./utils/restore_shared_env.sh
+      - name: Setup PHP with PECL extension
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.4'
+          # cache: true
+          ini-values: |
+            zend.assertions=1
+            display_errors=On
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
       - name: Install npm dependencies
         run: npm ci --include=dev
+      - name: Composer install
+        run: composer install
       - name: Export exchanges
         run: npm run export-exchanges
       - name: Live tests
         if: env.important_modified == 'true'
-        run: ./run-tests-simul.sh --js
+        run: ./run-tests-simul.sh --php-async
       - name: Live tests (specific)
         if: env.important_modified == 'false'
-        run: ./run-tests-simul.sh --js "${{ env.rest_files }}" "${{ env.ws_files }}"
+        run: ./run-tests-simul.sh --php-async "${{ env.rest_files }}" "${{ env.ws_files }}"
