--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,4 +1,4 @@
-name: Js
+name: Python
 
 on:
   workflow_dispatch:
@@ -8,26 +8,13 @@ on:
     branches: [ main, master ]
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
     if: ${{ !startsWith(github.event.head_commit.message, '[Automated changes]') && !contains(github.event.head_commit.message, 'Merge branch ''master'' of https://github.com/ccxt/ccxt') }}
     steps:
-    - name: Print vars
-      run: |
-        echo "GitHub Actor: $GITHUB_ACTOR"
-        echo "Repository: $GITHUB_REPOSITORY"
-        echo "Event Name: $GITHUB_EVENT_NAME"
-        echo "Workflow Name: $GITHUB_WORKFLOW"
-        echo "Run ID: $GITHUB_RUN_ID"
-        echo "Run Number: $GITHUB_RUN_NUMBER"
-        echo "Job Name: $GITHUB_JOB"
-        echo "Ref: $GITHUB_REF"
-        echo "SHA: $GITHUB_SHA"
-        echo "Head Commit: ${{ github.event.head_commit.message }}"
-        echo "Branch Name: ${GITHUB_REF##*/}"  # Extract the branch name from GITHUB_REF
     - uses: actions/checkout@v4
       if: github.ref == 'refs/heads/master'
       with:
@@ -44,76 +31,70 @@ jobs:
           echo "This commit was made by the action. Skipping."
           exit 0
         fi
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+        cache: 'pip'
+    - name: Install python dependencies
+      run: pip install -r ci-requirements.txt
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
         cache: 'npm'
+    - name: Check Python version
+      run: python --version
     - name: Install npm dependencies
       run: npm ci --include=dev
-    - name: Debug files changes
-      run: git diff --name-only HEAD^1 HEAD
     - name: Determine modified files
       run: ./utils/init_actions.sh
-    - name: Debug output
-      run: |
-        echo "Important files modified: ${{ env.important_modified }}"
-        echo "REST files: ${{ env.rest_files }}"
-        echo "WS files: ${{ env.ws_files }}"
-        cat shared_env.txt
-    - name: Check ref
-      run: echo $GITHUB_REF
-    - name: Remove JS Folder
-      if: github.ref == 'refs/heads/master'
-      run: |
-        rm -rf js/
-    - name: Pre-transpile and transpile TS
+    - name: Pre-transpile (export exchanges and emit API)
+      run: npm run pre-transpile-py
+    - name: Transpile to Python
       if: env.important_modified == 'true'
-      run: npm run pre-transpile-js
-    - name: Pre-transpile and transpile TS (Simplified)
-      if: env.important_modified == 'false'
-      run: npm run pre-transpile-js-simple
-    - name: Lint Rest (specific)
+      run: npm run force-transpile-fast-py
+    - name: Transpile to Python (specific)
       if: env.important_modified == 'false'
       run: |
         cleaned_rest_files=$(echo ${{ env.rest_files }} | tr -s ' ')
         for exchange in $cleaned_rest_files; do
-          npm run eslint "ts/src/$exchange.ts"
+          npm run transpileRest --python $exchange
         done
-    - name: Lint Ws (specific)
-      if: env.important_modified == 'false'
-      run: |
         cleaned_ws_files=$(echo ${{ env.ws_files }} | tr -s ' ')
         for exchange in $cleaned_ws_files; do
-          npm run eslint "ts/src/pro/$exchange.ts"
+          npm run transpileWs --python $exchange
         done
+    - name: Post-transpile (syntax check)
+      run: npm run check-python-syntax
     - name: Run Base Tests
       if: env.important_modified == 'true'
-      run: npm run test-base-rest-js
+      run: npm run test-base-rest-py
     - name: Run Base Ws Tests
       if: env.important_modified == 'true'
-      run: npm run test-base-ws-js
+      run: npm run test-base-ws-py
     - name: Run Id Tests
       if: env.important_modified == 'true'
-      run: npm run id-tests-js
+      run: npm run id-tests-py
     - name: Request tests
       if: env.important_modified == 'true'
-      run: npm run request-js
+      run: npm run request-py
     - name: Request tests (specific)
       if: env.important_modified == 'false'
       run: |
         cleaned_rest_files=$(echo ${{ env.rest_files }} | tr -s ' ')
         for exchange in $cleaned_rest_files; do
-          npm run request-js -- $exchange
+          npm run request-py-sync -- $exchange
+          npm run request-py-async -- $exchange
         done
     - name: Response tests
       if: env.important_modified == 'true'
-      run: npm run response-js
+      run: npm run response-py
     - name: Response tests (specific)
       if: env.important_modified == 'false'
       run: |
         cleaned_rest_files=$(echo ${{ env.rest_files }} | tr -s ' ')
         for exchange in $cleaned_rest_files; do
-          npm run response-js -- $exchange
+          npm run response-py-sync -- $exchange
+          npm run response-py-async -- $exchange
         done
     - name: Upload shared_env.txt
       uses: actions/upload-artifact@v4
@@ -121,37 +102,61 @@ jobs:
           name: shared_env
           path: shared_env.txt
 
-    - name: Upload Js Files
+    - name: Upload Python Files
       uses: actions/upload-artifact@v4
       with:
-        name: js-files
-        path: js/
-    - name: Push JS changes to master
+        name: python-files
+        path: python/
+    - name: Push Python changes to master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       if: github.ref == 'refs/heads/master'
       run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add js/ dist/ wiki/ README.md ts/ccxt.ts
-          git commit -m "[Automated changes] JS files" || echo "No changes to commit."
+          git add python/
+          git commit -m "[Automated changes] Python files" || echo "No changes to commit."
           git remote set-url origin https://${GITHUB_TOKEN}@github.com/${{ github.repository }}
           git config --global pull.rebase false
-          git pull origin master
+          git pull --rebase --autostash origin master
           git push
-    - name: Push To CCXT.WIKI
-      if: github.ref == 'refs/heads/master'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      run: |
-        cd build/ccxt.wiki
-        cp -R ../../wiki/* .
-        git commit -a -m "[Automated changes] ${{ github.event.head_commit.message }}" || true
-        git remote remove origin
-        git remote add origin https://${GITHUB_TOKEN}@github.com/ccxt/ccxt.wiki.git
-        git push origin HEAD:master
-        cd ../..
-
+  windows:
+    runs-on: windows-2022
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download shared_env
+        uses: actions/download-artifact@v4
+        with:
+          name: shared_env
+      - name: Download Py Files
+        uses: actions/download-artifact@v4
+        with:
+          name: python-files
+          path: python/
+      - name: Restore shared_env
+        run: ./utils/restore_shared_env.sh
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - name: Install npm dependencies
+        run: npm ci --include=dev
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+      - name: Install python dependencies
+        run: pip install -r ci-requirements.txt
+      - name: Export exchanges
+        run: npm run export-exchanges
+      - name: Run Id Tests
+        run: npm run id-tests-py
+      - name: Request tests
+        run: npm run request-py
+      - name: Response tests
+        run: npm run response-py
   live-tests:
     needs: build
     runs-on: ubuntu-latest
@@ -161,11 +166,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: shared_env
-      - name: Download JS Files
+      - name: Download Py Files
         uses: actions/download-artifact@v4
         with:
-          name: js-files
-          path: js/
+          name: python-files
+          path: python/
       - name: Restore shared_env
         run: ./utils/restore_shared_env.sh
       - uses: actions/setup-node@v4
@@ -174,11 +179,17 @@ jobs:
           cache: 'npm'
       - name: Install npm dependencies
         run: npm ci --include=dev
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+      - name: Install python dependencies
+        run: pip install -r ci-requirements.txt
       - name: Export exchanges
         run: npm run export-exchanges
       - name: Live tests
         if: env.important_modified == 'true'
-        run: ./run-tests-simul.sh --js
+        run: ./run-tests-simul.sh --python-async
       - name: Live tests (specific)
         if: env.important_modified == 'false'
-        run: ./run-tests-simul.sh --js "${{ env.rest_files }}" "${{ env.ws_files }}"
+        run: ./run-tests-simul.sh --python-async "${{ env.rest_files }}" "${{ env.ws_files }}"
