--- a/.github/workflows/go-app.yml
+++ b/.github/workflows/go-app.yml
@@ -51,9 +51,11 @@ jobs:
       # - name: Install dependencies
       #   run: cd go && go get ./ccxt && cd ..
       - name: Build
-        run: cd go && go build ./v4 && cd ..
+        run: go build -C go ./v4
       - name: Build tests
-        run: cd go && go build ./tests/main.go && cd ..
+        run: go -C go build ./tests/main.go
+      - name: Format go files
+        run: go fmt -C go ./v4 ./tests/
       - name: Test GO Types
         if: env.important_modified == 'true'
         run: npm run test-types-go
@@ -140,7 +142,7 @@ jobs:
       - name: Restore shared_env
         run: ./utils/restore_shared_env.sh
       - name: Build tests
-        run: cd  go/ && go build ./tests/main.go
+        run: go build -C go ./tests/main.go
       - name: Install npm dependencies
         run: npm ci --include=dev
       - name: Export exchanges
@@ -154,9 +156,9 @@ jobs:
       # - name: Adjust permissions
       #   run: cd go && chmod +x main
       - name: Build
-        run: cd go && go build ./v4 && cd ..
+        run: go build -C go ./v4
       - name: Build tests
-        run: cd go && go build ./tests/main.go && cd ..
+        run: go build -C go ./tests/main.go
       - name: Live tests
         if: env.important_modified == 'true'
         run: node run-tests --go --useProxy
