--- a/.github/workflows/go-app.yml
+++ b/.github/workflows/go-app.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Build tests
         run: go -C go build ./tests/main.go
       - name: Format go files
-        run: go fmt v4 tests
+        run: go fmt ./v4 ./tests
         working-directory: go
       - name: Test GO Types
         if: env.important_modified == 'true'
