update fmt command

--- a/.github/workflows/go-app.yml
+++ b/.github/workflows/go-app.yml
@@ -55,8 +55,11 @@ jobs:
       - name: Build tests
         run: go -C go build ./tests/main.go
       - name: Format go files
-        run: go fmt ./v4 ./tests
-        working-directory: go
+        run: go fmt .
+        working-directory: go/v4
+      - name: Format go tests
+        run: go fmt .
+        working-directory: go/tests
       - name: Test GO Types
         if: env.important_modified == 'true'
         run: npm run test-types-go
