chore: improve go action (#26566)
* chore: improve go action

* update format go

* try new command

* try upgrade go version

* update

* update

* update fmt command

* update

--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "transpileCSWs": "tsx build/csharpTranspiler.ts --ws",
     "buildCS": "dotnet build cs/ccxt.sln",
     "buildGO": "go build -C go ./v4",
+    "formatGO": "go fmt -C go v4 tests",
     "transpileGO": "tsx build/goTranspiler.ts",
     "buildCSRelease": "dotnet build cs --configuration Release",
     "csharp": "npm run transpileCS && npm run transpileCSWs && npm run buildCS",
-    "go": "npm run transpileGO && npm run buildGO",
+    "go": "npm run transpileGO && npm run buildGO && npm run formatGO",
     "force-build//WithoutGo": "npm run pre-transpile && npm run force-transpile-fast && npm run csharp && npm run post-transpile && npm run update-badges",
     "force-build": "npm run pre-transpile && npm run go && npm run force-transpile-fast && npm run csharp && npm run post-transpile && npm run update-badges",
     "//TMPCommentforce-build": "npm run pre-transpile && npm run force-transpile-fast && npm run csharp && npm run go && npm run post-transpile && npm run update-badges",
