--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "test-base-ws-py": "npm run ti-py  -- --baseTests --ws",
     "test-base-ws-php": "npm run ti-php -- --baseTests --ws",
     "test-base-ws-cs": "npm run ti-cs  -- --baseTests --ws",
+    "test-base-ws-go": "npm run ti-go  -- --baseTests --ws",
     "test-base-rest": "npm run test-base-rest-js && npm run test-base-rest-py && npm run test-base-rest-php && npm run test-base-rest-cs",
     "test-base-ws": "npm run test-base-ws-js   && npm run test-base-ws-py   && npm run test-base-ws-php   && npm run test-base-ws-cs",
     "test": "npm run build && npm run commonjs-test && npm run id-tests && npm run request-tests && npm run response-tests && npm run live-tests",
@@ -183,7 +184,8 @@
     "test-freshness": "tsx ./utils/test-freshness.ts",
     "benchmark": "tsx examples/ts/benchmark.ts",
     "cleanup-old-tags": "tsx ./build/cleanup-old-tags.ts",
-    "test-types-go": "go run -C go ./tests/types/types.go"
+    "test-types-go": "go run -C go ./tests/types/types.go",
+    "test-go": "npm run test-types-go && npm run response-go && npm run request-go && npm run test-base-rest-go && npm run test-base-ws-go"
   },
   "types": "./js/ccxt.d.ts",
   "devDependencies": {
