--- a/cs/ccxt/ccxt.csproj
+++ b/cs/ccxt/ccxt.csproj
@@ -28,6 +28,7 @@
     <NoWarn>CS1998, CS0168, CS3021, CS0108, CS8604, CS8600, CS8601, CS8602, CS8603, CS8625, CS8618, CS8981, CA2200, CS8974, CS043, CS0436, CA2200, CS8619, CS4014, CS8625, CS8600, CS0184</NoWarn>
   </PropertyGroup>   
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.31.1" />
     <PackageReference Include="Newtonsoft.Json" Version="*" />
           </ItemGroup>
   <ItemGroup>
