--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "jsdoc-to-markdown": "^8.0.0",
     "ololog": "^1.1.175",
     "piscina": "^3.2.0",
+    "protobufjs": "^7.5.3",
     "replace-in-file": "^6.3.5",
     "rollup": "^2.70.1",
     "rollup-plugin-execute": "1.1.1",
