--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -41,6 +41,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.4'
+        extensions: protobuf
         # cache: true
         ini-values: |
           zend.assertions=1
@@ -53,8 +54,6 @@ jobs:
       run: npm ci --include=dev
     - name: Composer install
       run: composer install
-    - name: Install protobuf with PECL
-      run: pecl install protobuf
     - name: Determine modified files
       run: ./utils/init_actions.sh
     - name: Pre-transpile (export exchanges and emit API)
