--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -41,6 +41,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.4'
+        extensions: protobuf
         # cache: true
         ini-values: |
           zend.assertions=1
