--- a/package.json
+++ b/package.json
@@ -196,8 +196,8 @@
     "as-table": "^1.0.55",
     "asciichart": "^1.5.25",
     "assert": "^2.0.0",
-    "ast-transpiler": "^0.0.68",
-    "docsify": "^4.11.4",
+    "ast-transpiler": "^0.0.70",
+    "docsify": "^4.13.1",
     "eslint": "8.22.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.25.4",
@@ -206,6 +206,7 @@
     "jsdoc-to-markdown": "^8.0.0",
     "ololog": "^1.1.175",
     "piscina": "^3.2.0",
+    "protobufjs": "^7.5.3",
     "replace-in-file": "^6.3.5",
     "rollup": "^2.70.1",
     "rollup-plugin-execute": "1.1.1",
