--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,8 @@ jobs:
       - name: Set new Version
         run: |
           npm config set git-tag-version=false
-          NPM_VERSION=$(npm version patch)
+          NEW_VERSION=$(./utils/smart-bump.sh)
+          NPM_VERSION=$(npm version "$NEW_VERSION")
           echo "NPM_VERSION=$NPM_VERSION" >> $GITHUB_ENV
           COMMIT_MESSAGE=${NPM_VERSION:1}
           echo "COMMIT_MESSAGE=$COMMIT_MESSAGE" >> $GITHUB_ENV
