--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -28,6 +28,7 @@ jobs:
         echo "SHA: $GITHUB_SHA"
         echo "Head Commit: ${{ github.event.head_commit.message }}"
         echo "Branch Name: ${GITHUB_REF##*/}"  # Extract the branch name from GITHUB_REF
+        echo "Test smart version: $(./utils/smart-bump.sh)"
     - uses: actions/checkout@v4
       if: github.ref == 'refs/heads/master'
       with:
