--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -50,7 +50,7 @@ jobs:
         cache: 'npm'
     - name: Debug Node version smart bump tmp remove
       run: |
-        echo "Test smart version: $(./utils/smart-bump.sh)"
+        echo "Test smart version: $(./build/smart-bump.sh)"
     - name: Install npm dependencies
       run: npm ci --include=dev
     - name: Debug files changes
