renamed ws to pro

--- a/.github/workflows/go-app.yml
+++ b/.github/workflows/go-app.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build
         run: go build -C go ./v4
       - name: Build Ws
-        run: go build -C go ./v4/ws
+        run: go build -C go ./v4/pro
       - name: Build tests
         run: go -C go build ./tests/main.go
       - name: Format go files
