--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "transpileCS": "tsx build/csharpTranspiler.ts --multi",
     "transpileCSWs": "tsx build/csharpTranspiler.ts --ws",
     "buildCS": "dotnet build cs/ccxt.sln",
-    "buildGO": "go build -C go ./v4 && go build -C go ./v4/ws",
+    "buildGO": "go build -C go ./v4 && go build -C go ./v4/pro",
     "formatGO": "go fmt -C go v4 tests",
     "transpileGO": "tsx build/goTranspiler.ts && tsx build/goTranspiler.ts --ws",
     "buildCSRelease": "dotnet build cs --configuration Release",
